tests/ui/cve_2024_27284/cve_2024_27284.stderr
error: it will be an undefined behavior to pass a pointer returned by `cass_iterator_next` to `cass_iterator_get_*` in a `std::iter::Iterator` implementation
  --> tests/ui/cve_2024_27284/cve_2024_27284.rs:29:19
   |
LL |             match cass_iterator_next(self.0) {
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ `cass_iterator_next` called here
   |
   = help: consider implementing a `LendingIterator` instead
   = note: `#[deny(cassandra_iter_next_ptr_passed_to_cass_iter_get)]` on by default

error: aborting due to 1 previous error

